// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [arrow] 1`] = `
<DocumentFragment>
  <div
    class="Arrow Arrow--bottom"
    data-testid="graph-break-point-arrow-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [dot] 1`] = `
<DocumentFragment>
  <div
    class="Dot Dot--bottom"
    data-testid="graph-break-point-dot-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [double-line] 1`] = `
<DocumentFragment>
  <div
    class="DoubleLine DoubleLine--bottom"
    data-testid="graph-break-point-double-line-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [line] 1`] = `
<DocumentFragment>
  <div
    class="Line Line--bottom"
    data-testid="graph-break-point-line-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [ring] 1`] = `
<DocumentFragment>
  <div
    class="Ring Ring--bottom"
    data-testid="graph-break-point-ring-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [slash] 1`] = `
<DocumentFragment>
  <div
    class="Slash Slash--bottom"
    data-testid="graph-break-point-slash-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [bottom] break point correctly when the theme is [zig-zag] 1`] = `
<DocumentFragment>
  <div
    class="ZigZag ZigZag--bottom"
    data-testid="graph-break-point-zig-zag-bottom"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [arrow] 1`] = `
<DocumentFragment>
  <div
    class="Arrow Arrow--top"
    data-testid="graph-break-point-arrow-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [dot] 1`] = `
<DocumentFragment>
  <div
    class="Dot Dot--top"
    data-testid="graph-break-point-dot-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [double-line] 1`] = `
<DocumentFragment>
  <div
    class="DoubleLine DoubleLine--top"
    data-testid="graph-break-point-double-line-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [line] 1`] = `
<DocumentFragment>
  <div
    class="Line Line--top"
    data-testid="graph-break-point-line-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [ring] 1`] = `
<DocumentFragment>
  <div
    class="Ring Ring--top"
    data-testid="graph-break-point-ring-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [slash] 1`] = `
<DocumentFragment>
  <div
    class="Slash Slash--top"
    data-testid="graph-break-point-slash-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;

exports[`Filtered Graph Break Point > should render a [top] break point correctly when the theme is [zig-zag] 1`] = `
<DocumentFragment>
  <div
    class="ZigZag ZigZag--top"
    data-testid="graph-break-point-zig-zag-top"
    style="--breakpoint-colour: rbg(125, 67, 100);"
  />
</DocumentFragment>
`;
